# blender-addon-framework

./: .gitignore  .gitlab-ci.yml  =1.0.0  =1.16.0  =1.6.0  CONTRIBUTING.md  PROJECT_STATE.md  README.md  ROADMAP.md  api_dump.txt  compile.py  framework.py  main.py  pyproject.toml  test.py
.github/workflows/: docs-bdocgen.yml  framework-tests.yml
addons/VSEoneclickgreenscreen/: .gitignore  __init__.py  blender_manifest.toml  pyproject.toml
addons/font_selector/: __init__.py  blender_manifest.toml  pyproject.toml
addons/retro_shift_a/: README.md  __init__.py  blender_manifest.toml  pyproject.toml
addons/subtitle_studio/: PROJECT_STATE.md  __init__.py  pyproject.toml
addons/subtitle_studio/docs/: architecture.md  bdocgen.md  changelog.md  dependencies.md  dev.md  getting-started.md  index.md  whisper-config.md
addons/subtitle_studio/docs/_build/: index.html  manifest.json
addons/subtitle_studio/docs/_build/changelog/: index.html
addons/subtitle_studio/docs/_build/dependencies/: index.html
addons/subtitle_studio/docs/_build/dev/: index.html
addons/subtitle_studio/docs/_build/functional-style-review/: index.html
addons/subtitle_studio/docs/_build/subtitle-studio-hardening/: index.html
addons/subtitle_studio/docs/_build/whisper-config/: index.html
addons/test/: __init__.py  blender_manifest.toml  pyproject.toml
architecture/: README.md  adapter_model.md  plugin_architecture.md  repl_architecture.md
bdocgen/: README.md  build.clj  deps.edn  pyproject.toml
bdocgen/bdocgen/docs/_build/: index.html  manifest.json
bdocgen/bdocgen/docs/_build/_assets/: theme.css
bdocgen/docs/: architecture.md  cli-reference.md  getting-started.md  index.md  ux_over_ui.md
bdocgen/resources/: config.edn
bdocgen/scripts/: format.sh
bdocgen/src/bdocgen/: __init__.py  cli.clj  cli.py  core.clj  core.py  discovery.clj  discovery.py  fs.clj  fs.py  logging.clj  markdown.clj  markdown.py  pages.clj  pages.py  site.clj  site.py  specs.clj  specs.py  writer.clj  writer.py
bdocgen/src/bdocgen/interop/: python.clj
bdocgen/test/bdocgen/: cli_test.clj  core_test.clj  discovery_test.clj  pages_test.clj  site_test.clj  spec_test.clj
bdocgen/tests/: test_cli.py  test_core.py  test_discovery.py  test_markdown.py  test_pages.py  test_site.py  test_specs.py
code_templates/core/: __init__.py  template.toml
code_templates/i18n/: __init__.py  dictionary.py  template.toml
code_templates/ui/: __init__.py  template.toml
common/: blender_detection.py  blender_launcher.py  uv_integration.py
common/io/: FileManagerClient.py
docs/: addon-structure-standard.md  cli-workflows.md  coding-style.md  command-reference.md  completion-setup.md  config-lisp-planning.md  config-reference.md  context-resolution.md  debugger-log-analysis.md  development-workflow.md  getting-started.md  index.md  migrating-your-addon-to-blender-addon-framework.md  repl-workflow.md  runtime-addon-development.md  theme-attribution.md  troubleshooting.md  venv-usage.md
scripts/: __init__.py  addon_deps.py  analyze_eval_timeline.py  audit_stale_addons.py  compile.py  create.py  parse_eval_lisp.py  release.py  test.py
src/: __init__.py  framework.py  main.py
tests/: test_addon_generation_templates.py  test_cli_completion_and_baf.py  test_code_templates.py  test_command_context.py  test_framework_functional_helpers.py  test_framework_import_rewrite.py  test_framework_module_resolution.py  test_framework_runtime_init.py  test_main_runtime_configuration.py  test_rename_addon.py  test_repl.py  test_repl_args.py  test_repl_completion.py  test_template_extract.py  test_terminal_readline.py  test_uv_integration.py
wheels/: README.md
(+175 files in other folders)
