[project]
name = "subtitle-editor"
version = "1.0.0"
description = "Blender addon: subtitle-editor"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    "onnxruntime>=1.17.0,<1.24.0",
    "pysubs2>=1.8.0",
    "numpy<2.0",
]

[tool.uv]
package = false
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
